Project Ecommerce {
    database: "SQLite"
    note: "Datatype of Prisma ORM"
}

Table Users {
  id Int [pk, increment]
  email String [unique]
  name String
  password String
  createdAt DateTime [default: `@now()`]
  updatedAt DateTime [default: `@updateAt()`]
}

Table Posts {
  id Int [pk, increment]
  title String 
  content String 
  authorId Int
  createdAt DateTime [default: `@now()`]
  updatedAt DateTime [default: `@updateAt()`]
}

Ref: Posts.authorId > Users.id [delete: cascade, update: no action]

Table refreshTokens {
  token String [unique]
  userId Int
  createdAt DateTime [default: `@now()`]
  expiresAt DateTime
}

Ref: refreshTokens.userId > Users.id [delete: cascade, update: no action]